--- a/app/src/main/res/layout/patient_item_view_holder.xml
+++ b/app/src/main/res/layout/patient_item_view_holder.xml
@@ -12,7 +12,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="16dp"
         android:layout_width="140dp"
-        tools:src="@tools:sample/avatars"
+        tools:src="@drawable/patient"
         android:layout_height="match_parent"/>
 
 
@@ -56,6 +56,7 @@
         />
 
     <Button
+        android:id="@+id/tests_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
