--- a/app/src/main/res/layout/patient_item_view_holder.xml
+++ b/app/src/main/res/layout/patient_item_view_holder.xml
@@ -36,7 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="ID 1"
-        android:textSize="12sp"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/patient_name_text_view"
         app:layout_constraintStart_toStartOf="@id/patient_name_text_view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,15 +55,28 @@
         android:layout_margin="0dp"
         />
 
-    <Button
-        android:id="@+id/tests_button"
+    <TextView
+        android:id="@+id/patient_nurse_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        tools:text="Nurse Assigned: Marta Perez"
+        android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/patient_room_text_view"
         app:layout_constraintStart_toStartOf="@id/patient_name_text_view"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Go to Tests"
+        android:layout_margin="0dp"
+        />
+
+    <Button
+        android:id="@+id/tests_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="12dp"
+        app:layout_constraintTop_toBottomOf="@id/patient_nurse_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Tests"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
