--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,11 +12,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/addPatientButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recycler_view"
+        android:textSize="24dp"
+        android:textStyle="bold"
         android:text="Nurse id"
-        android:layout_margin="24dp"/>
+        android:gravity="center_horizontal"
+        android:layout_margin="4dp"/>
 
-    <Button
+    <!--<Button
         android:id="@+id/addPatientButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,12 +28,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/textNurseId"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"/>-->
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        app:layout_constraintTop_toBottomOf="@id/addPatientButton"
+        app:layout_constraintTop_toBottomOf="@id/textNurseId"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
