--- a/app/src/main/res/layout/test_item_view_holder.xml
+++ b/app/src/main/res/layout/test_item_view_holder.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="140dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
