--- a/app/src/main/res/layout/activity_tests.xml
+++ b/app/src/main/res/layout/activity_tests.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textTestId"
+        android:id="@+id/patientInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        app:layout_constraintTop_toBottomOf="@id/textTestId"
+        app:layout_constraintTop_toBottomOf="@id/patientInfo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/addTestButton"
