--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/lol1" android:title="lol"/>
-    <item android:id="@+id/lol2" android:title="lo2"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_logout"
+        android:icon="@drawable/logout"
+        android:title="Logout"
+        app:showAsAction="always"
+        android:tooltipText="Logout"
+        />
+
+    <item
+        android:id="@+id/goBack"
+        android:title="Go Back" />
 </menu>
