--- a/app/src/main/res/layout/activity_patient.xml
+++ b/app/src/main/res/layout/activity_patient.xml
@@ -66,6 +66,6 @@
         android:layout_below="@id/editTextRoom"
         android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"
-        android:text="Save Patient"/>
+        android:text="@string/addEditPatientButtonText"/>
 
 </RelativeLayout>
