--- a/app/src/main/res/layout/activity_tests.xml
+++ b/app/src/main/res/layout/activity_tests.xml
@@ -37,7 +37,7 @@
         android:id="@+id/addTestButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Test"
+        android:text="@string/addNewTestButtonText"
         app:layout_constraintTop_toBottomOf="@id/recycler_view"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
