--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- res/layout/activity_main.xml -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,41 +8,43 @@
 
     <TextView
         android:id="@+id/textNurseId"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/recycler_view"
+        app:layout_constraintBottom_toTopOf="@id/buttonToPatients"
         android:textSize="24dp"
         android:textStyle="bold"
         android:text="Nurse id"
         android:gravity="center_horizontal"
         android:layout_margin="4dp"/>
 
-    <!--<Button
-        android:id="@+id/addPatientButton"
+    <Button
+        android:id="@+id/buttonToPatients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Patient"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/textNurseId"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"/>-->
+        android:text="Go to Patients"
+        android:layout_below="@id/textNurseId"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"/>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        app:layout_constraintTop_toBottomOf="@id/textNurseId"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:listitem="@tools:sample/avatars"
-        android:layout_margin="1dp"/>
+    <Button
+        android:id="@+id/buttonToTests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Tests"
+        android:layout_below="@id/buttonToPatients"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"/>
+</RelativeLayout>
 
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
