--- a/app/src/main/res/layout/activity_add_test.xml
+++ b/app/src/main/res/layout/activity_add_test.xml
@@ -16,12 +16,21 @@
             android:text="Patient ID:"
             android:layout_gravity="center_vertical"/>
 
-        <EditText
+        <!--<EditText
             android:id="@+id/editTextPatientId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:enabled="false"
-            android:hint="Enter Patient ID"/>
+            android:hint="Enter Patient ID"/>-->
+
+        <Spinner
+            android:id="@+id/spinnerPatientId"
+            android:layout_width="match_parent"
+            android:tooltipText="Nurse"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextLastName"
+            android:layout_marginTop="8dp"
+            android:hint="Select Nurse ID" />
     </LinearLayout>
 
     <LinearLayout
