--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,15 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--<item
+        android:id="@+id/goBack"
+        android:title="Go Back" />-->
+    <item
+        android:id="@+id/home"
+        android:title="Home" />
+
     <item
         android:id="@+id/menu_logout"
         android:icon="@drawable/logout"
         android:title="Logout"
-        app:showAsAction="always"
         android:tooltipText="Logout"
         />
 
-    <item
-        android:id="@+id/goBack"
-        android:title="Go Back" />
+
 </menu>
