--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/addPatientButton"
+        android:title="Add Patient" />
+
+    <item
+        android:id="@+id/home"
+        android:title="Home" />
+
+    <item
         android:id="@+id/menu_logout"
         android:icon="@drawable/logout"
         android:title="Logout"
@@ -10,7 +18,5 @@
 
          />
 
-    <item
-        android:id="@+id/addPatientButton"
-        android:title="Add Patient" />
+
 </menu>
