--- a/app/src/main/res/layout/activity_add_test.xml
+++ b/app/src/main/res/layout/activity_add_test.xml
@@ -86,6 +86,7 @@
             android:id="@+id/editTextDepartment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="@integer/MAX_LENGTH"
             android:hint="Enter Department"/>
     </LinearLayout>
 
@@ -105,6 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:maxLength="5"
             android:hint="Enter BPL"/>
     </LinearLayout>
 
@@ -124,6 +126,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:maxLength="5"
             android:hint="Enter BPH"/>
     </LinearLayout>
 
@@ -143,6 +146,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:maxLength="4"
             android:hint="Enter Temperature"/>
     </LinearLayout>
 
